# scfw

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
assets/: kernel_driver.c
cmake/: llvm_paths.cmake  scfw.cmake  toolchain.cmake  winsdk.cmake
cmake/post-build/: print_size.cmake  verify_pe.cmake
examples/: CMakeLists.txt
examples/empty/: CMakeLists.txt  main.cpp
examples/kernel_query_user/: CMakeLists.txt  main.cpp
examples/messagebox/: CMakeLists.txt  main.cpp
examples/opengl_triangle/: CMakeLists.txt  main.cpp
examples/writeconsole/: CMakeLists.txt
examples/writeconsole_xor/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/scfw/: crt0.h  runtime.h
lib/include/scfw/platform/windows/: common.h  kernelmode.h  usermode.h
lib/include/scfw/runtime/: fnv1a.h  pic.h  xorstr.h
lib/src/: crt0.c
lib/src/arch/x64/: init.S  start.S
lib/src/arch/x86/: init.S  start.S
scripts/: build-all.ps1  build-all.sh  fetch-winsdk.ps1  fetch-winsdk.sh
tools/: CMakeLists.txt  scrun.c
